refactor(AGOGOS-228): trigger event classes should return interceptors