@@ -5,12 +5,12 @@ import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.redhat.agogos.core.CloudEventHelper;
 import com.redhat.agogos.core.PipelineRunState;
 import com.redhat.agogos.core.v1alpha1.Build;
+import io.fabric8.tekton.triggers.v1beta1.TriggerInterceptor;
 import io.quarkus.runtime.annotations.RegisterForReflection;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Getter
@@ -25,10 +25,12 @@ public class BuildTriggerEvent implements TriggerEvent {
     private String filter;
 
     @Override
-    public List<String> toCel(Trigger trigger) {
-        return Arrays.asList(
+    public List<TriggerInterceptor> interceptors(Trigger trigger) {
+        List<String> expressions = List.of(
                 String.format("header.match('ce-type', '%s')",
                         CloudEventHelper.type(Build.class, PipelineRunState.SUCCEEDED)),
                 filter);
+
+        return List.of(toCel(expressions));
     }
 }
