@@ -2,12 +2,12 @@ package com.redhat.agogos.core.v1alpha1.triggers;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonTypeName;
+import io.fabric8.tekton.triggers.v1beta1.TriggerInterceptor;
 import io.quarkus.runtime.annotations.RegisterForReflection;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Getter
@@ -22,8 +22,8 @@ public class CelTriggerEvent implements TriggerEvent {
     private String filter;
 
     @Override
-    public List<String> toCel(Trigger trigger) {
-        return Arrays.asList(filter);
+    public List<TriggerInterceptor> interceptors(Trigger trigger) {
+        return List.of(toCel(List.of(filter)));
     }
 
 }
